<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_title_mod">
    <menu>
        <item
            android:id="@+id/nav_2_player"
            android:icon="@drawable/ic_outline_looks_2_24px"
            android:title="@string/nav_2gioc" />
        <item
            android:id="@+id/nav_3_player"
            android:icon="@drawable/ic_outline_looks_3_24px"
            android:title="@string/nav_3gioc" />
        <item
            android:id="@+id/nav_4_player"
            android:icon="@drawable/ic_outline_looks_4_24px"
            android:title="@string/nav_4gioc" />
        <item
            android:id="@+id/nav_mirroring"
            android:icon="@drawable/ic_mirroring_black_24dp"
            android:title="@string/nav_mirroring" />
    </menu>
    </item>

    <item android:title="@string/nav_title_alt">
        <menu>
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_outline_history_24px"
                android:title="@string/nav_history" />
            <item
                android:id="@+id/nav_send_app"
                android:icon="@drawable/ic_send_24dp"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/nav_rate" />
            <item
                android:id="@+id/nav_guide"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/nav_guide" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_outline_settings_24px"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
