<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.Preference
        android:title="@string/setting_advanced"
        android:summary="@string/setting_advanced_d"
        android:key="advanced">
    </androidx.preference.Preference>

    <androidx.preference.Preference
        android:title="@string/setting_crash"
        android:key="crash">
    </androidx.preference.Preference>

    <androidx.preference.Preference
        android:title="@string/setting_intro"
        android:key="intro">
    </androidx.preference.Preference>

    <androidx.preference.Preference
        android:title="@string/upgrade"
        android:key="pro">
    </androidx.preference.Preference>

    <androidx.preference.Preference
        android:title="Firebase Remote Config"
        android:summary="Fetching..."
        android:key="remote_config">
    </androidx.preference.Preference>

</androidx.preference.PreferenceScreen>